# bq-remote-sudachi

./: README.md
python/: Dockerfile  pyproject.toml
python/src/: app.py  main.py
